<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/title"/>
    
    <RelativeLayout 
        android:id="@+id/notice_detail_titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smoke_white"
        android:padding="10dp"
        >
        <TextView 
            android:id="@+id/notice_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/splash_bg_blue"
            android:textSize="20sp"
            />
        <TextView 
            android:id="@+id/notice_detail_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_notice"
            android:textSize="13sp"
            android:textColor="@color/text_gray"
            android:layout_below="@id/notice_detail_title"
            android:paddingTop="5dp"
            />
        <TextView 
            android:id="@+id/notice_detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            android:layout_alignTop="@id/notice_detail_department"
            android:layout_alignParentRight="true"
            android:paddingTop="5dp"
            android:drawableLeft="@drawable/time_icon"
            android:paddingLeft="5dp"
            />
        <TextView 
            android:id="@+id/notice_detail_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            android:text="@string/fujian"
            android:layout_below="@id/notice_detail_time"
            android:layout_alignParentRight="true"
            android:paddingTop="3dp"
            android:visibility="gone"
            />
    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/dark_gray"
        />
    
        <WebView 
            android:id="@+id/notice_detail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    

</LinearLayout>
