<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    
    <RelativeLayout
        android:id="@+id/schedule_titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash_bg_blue" >
        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:src="@drawable/back" />
        
        <RadioGroup 
            android:id="@+id/schedule_select_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:background="@drawable/mail_group_bg"
            >
            <RadioButton 
                android:id="@+id/schedule_undoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/Un_schedule"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:textColor="@color/text_white_color"
                android:textSize="13sp"
                android:background="@drawable/mail_recevie_box_selector"
                android:checked="true"
                />
            <RadioButton 
                android:id="@+id/schedule_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/scheduled"
                 android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:textColor="@color/text_white_color"
                android:textSize="13sp"
                android:gravity="center"
                android:background="@drawable/schedule_done_radiobtn_selector"
                />
            <RadioButton 
                android:id="@+id/schedule_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/schedule_over"
                 android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:textColor="@color/text_white_color"
                android:textSize="13sp"
                android:gravity="center"
                android:background="@drawable/mail_send_box_seletor"
                />
        </RadioGroup>
    </RelativeLayout>
    
    <FrameLayout 
        android:id="@+id/schedule_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/schedule_titleLayout"
        >
    </FrameLayout>

</RelativeLayout>
