<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/title"/>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            >
            <TextView 
                android:id="@+id/contact_detail_nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/contact_name"
                android:textSize="15sp"
                />
            <TextView 
                android:id="@+id/contact_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_below="@id/contact_detail_nameTv"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                />
            <View 
                android:id="@+id/contact_detail_line1"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_gray"
                android:layout_below="@id/contact_detail_name"
                android:layout_marginTop="8dp"
                />
            
            <TextView 
                android:id="@+id/contact_detail_mobileTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/contact_mobile"
                android:textSize="15sp"
                android:layout_below="@id/contact_detail_line1"
                android:paddingTop="8dp"
                />
            <TextView 
                android:id="@+id/contact_detail_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_below="@id/contact_detail_mobileTv"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                />
            <ImageView 
                android:id="@+id/contact_detail_mobile_sms"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/sms_button"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/contact_detail_mobileTv"
                android:padding="8dp"
                />
            <ImageView 
                android:id="@+id/contact_detail_mobile_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/call_button"
                android:layout_toLeftOf="@id/contact_detail_mobile_sms"
                android:layout_alignTop="@id/contact_detail_mobileTv"
                android:padding="8dp"
                />
            <View 
                android:id="@+id/contact_detail_line2"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_gray"
                android:layout_below="@id/contact_detail_mobile"
                android:layout_marginTop="8dp"
                />
            
            
            <TextView 
                android:id="@+id/contact_detail_phone1Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/contact_phone1"
                android:textSize="15sp"
                android:layout_below="@id/contact_detail_line2"
                android:paddingTop="8dp"
                />
            <TextView 
                android:id="@+id/contact_detail_phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_below="@id/contact_detail_phone1Tv"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                />
            <ImageView 
                android:id="@+id/contact_detail_phone1_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/call_button"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/contact_detail_phone1Tv"
                android:padding="8dp"
                />
            <View 
                android:id="@+id/contact_detail_line3"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_gray"
                android:layout_below="@id/contact_detail_phone1"
                android:layout_marginTop="8dp"
                />
            
            <TextView 
                android:id="@+id/contact_detail_phone2Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/contact_phone2"
                android:textSize="15sp"
                android:layout_below="@id/contact_detail_line3"
                android:paddingTop="8dp"
                />
            <TextView 
                android:id="@+id/contact_detail_phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_below="@id/contact_detail_phone2Tv"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                />
            <ImageView 
                android:id="@+id/contact_detail_phone2_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/call_button"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/contact_detail_phone2Tv"
                android:padding="8dp"
                />
            <View 
                android:id="@+id/contact_detail_line4"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_gray"
                android:layout_below="@id/contact_detail_phone2"
                android:layout_marginTop="8dp"
                />
            
            <TextView 
                android:id="@+id/contact_detail_emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/contact_email"
                android:textSize="15sp"
                android:layout_below="@id/contact_detail_line4"
                android:paddingTop="8dp"
                />
            <TextView 
                android:id="@+id/contact_detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_below="@id/contact_detail_emailTv"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                />
            <ImageView 
                android:id="@+id/contact_detail_email_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/email_btn"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/contact_detail_emailTv"
                android:padding="8dp"
                android:visibility="gone"
                />
            <View 
                android:id="@+id/contact_detail_line5"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_gray"
                android:layout_below="@id/contact_detail_email"
                android:layout_marginTop="8dp"
                />
            
            <TextView 
                android:id="@+id/contact_detail_departmentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/contact_department"
                android:textSize="15sp"
                android:layout_below="@id/contact_detail_line5"
                android:paddingTop="8dp"
                />
            <TextView 
                android:id="@+id/contact_detail_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_below="@id/contact_detail_departmentTv"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                />
            <View 
                android:id="@+id/contact_detail_line6"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_gray"
                android:layout_below="@id/contact_detail_department"
                android:layout_marginTop="8dp"
                />
            
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
