<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/mail_detail_topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <RelativeLayout
        android:id="@+id/mail_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smoke_white"
        android:layout_below="@id/mail_detail_topLayout"
        android:padding="10dp" >

        <TextView
            android:id="@+id/mail_detail_titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/splash_bg_blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mail_detail_sendUserTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail_detail_titleTV"
            android:paddingTop="5dp"
            android:text="@string/send_name"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/mail_detail_sendUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail_detail_titleTV"
            android:layout_toRightOf="@id/mail_detail_sendUserTv"
            android:paddingTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/mail_detail_sendTimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail_detail_sendUserName"
            android:paddingTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/mail_detail_fujian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/mail_detail_sendUserName"
            android:paddingTop="5dp"
            android:text="0"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/mail_detail_fujianTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail_detail_sendUserName"
            android:layout_toLeftOf="@id/mail_detail_fujian"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:text="@string/mail_fujian"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />
    </RelativeLayout>

    <View
        android:id="@+id/mail_detail_title_lineView"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_below="@id/mail_detail_title"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/mail_detail_bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/smoke_white"
        android:gravity="right"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/mail_detail_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/huifu_icon" />

        <ImageView
            android:id="@+id/mail_detail_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:src="@drawable/zhuangfa_icon" />
    </RelativeLayout>

    <View
        android:id="@+id/mail_detail_botoom_lineView"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_above="@id/mail_detail_bottomLayout"
        android:background="@color/light_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/mail_detail_botoom_lineView"
        android:layout_below="@id/mail_detail_title_lineView"
        android:background="@color/white"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mail_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/light_gray"
                 />
            
            <TextView 
                android:id="@+id/mail_detail_fujian1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_fujian"
                android:paddingTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/text_gray"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/mail_detail_accessorysLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>